--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ a:hover{color: #FF0000;}
 </head>
 
 <body>
-	<h1 class="mytitle">219970109 姜凯元</h1>
+	<h1 class="mytitle">219970109姜凯元</h1>
 	<ul id="dowebok">
 		<li>
 			<div><a href="作业1.html"><img data-original="img/tibet-1.jpg" src="img/tibet-1.jpg" alt="图片1"></a></div>
