--- a/index.html
+++ b/index.html
@@ -1,50 +1,92 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>我的网站</title>
-<style>
-* { margin: 0; padding: 0;}
-a{color: #000000;text-decoration: none;}
-a:hover{color: #FF0000;}
-
-.mytitle{text-align: center;}
-#dowebok { width: 90%; margin: 0 auto; font-size: 14px;}
-#dowebok li { float: left; width: 30%; margin-left: 1%; padding-top: 1%;}
-#dowebok li img { width: 100%;}
-#dowebok li .dt { width: 100%;text-align: center;}
-#dowebok li{list-style-type: none;}
-</style>
-</head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>219970109姜凯元
 <body>
-	<h1 class="mytitle">219970109 姜凯元</h1>
-	<ul id="dowebok">
-		<li>
-			<div><a href="作业1.html"><img data-original="img/tibet-1.jpg" src="img/tibet-1.jpg" alt="图片1"></a></div>
-			<div class="dt"><a href="作业1.html">作品1：普通网页布局展示</a></div>
-		</li>
-		<li>
-			<div><img data-original="img/tibet-2.jpg" src="img/tibet-2.jpg" alt="图片2"></div>
-			<div class="dt">作品2：普通网页布局展示</div>
-		</li>
-		<li>
-			<div><img data-original="img/tibet-1.jpg" src="img/tibet-1.jpg" alt="图片1"></div>
-			<div class="dt">作品1：普通网页布局展示</div>
-		</li>
-		<li>
-			<div><img data-original="img/tibet-2.jpg" src="img/tibet-2.jpg" alt="图片2"></div>
-			<div class="dt">作品2：普通网页布局展示</div>
-		</li>
-		<li>
-			<div><img data-original="img/tibet-1.jpg" src="img/tibet-1.jpg" alt="图片1"></div>
-			<div class="dt">作品1：普通网页布局展示</div>
-		</li>
-		<li>
-			<div><img data-original="img/tibet-2.jpg" src="img/tibet-2.jpg" alt="图片2"></div>
-			<div class="dt">作品2：普通网页布局展示</div>
-		</li>
-	</ul>
+    <script>
+        // 1.
+        let a1, b1, c1 = [1,2,3, ];
+        console.log(a1, b1, c1);
+        let [a2,b2,c2] =[1,2,3, ]
+        ;console.log(a2, b2,c2);
+        let [a3,b3,c3] = [1,, 3, ];
+        console.log(a3, b3,c3);
+        let [a4, b4] =[1];
+        console.log(a4,b4);
+        let {y:a5,b5} = {x: 1,y: 2};
+        console.log(a5, b5);
+        let {a6, b6} = 123;
+        console.log(a6,b6);
+        // 2.
+        let set = new Set( );
+        set.add(1);
+        set.add(2);
+        set.add(3);
+        set.delete(2);
+        let i = set.values();
+        console.log(i.next());
+        console.log(i.next());
+        console.log(i.next());
+        // 3.
+        let map = new Map();
+        map.set(1,"a");
+        map.set(2,"b");
+        map.set(3,"c");
+        map.set(4,"d");
+        for (let i = 1; i <= map.size; i++) {
+        console.log(map.get(i));
+        }
+        map.forEach(function(value,key) {
+            console.log(value);
+        });
+        for(let v of map.values()){
+        console.log(v);
+        }
+        for(var prop in map){
+        console.log(prop);
+        }
+        // 4.
+        let arr1 =[1,2,3];
+        let arr2 = arr1;
+        console.log( arr1==arr2);
+        let arr3 = [...arr1];
+        console.log(arr1==arr3);
+        // 5.
+        const arr4 = [1,2,3];
+        arr4.forEach((item,index) => {
+            console.log(item);
+        });
+        // 6.
+        Array.of(1,2,3).filter(i => i > 1).forEach(i => console.log(i));
+        let fib = n => n > 1 ? fib(n - 1) + fib(n - 2) : n;
+        // 7.
+        class Animal {
+			constructor(name) {
+			    this.name = name;
+			}
+			
+			shout() {
+			    console.log(`${this.name} 在叫`);
+			}
+			}
+			
+			class Dog extends Animal {
+			    constructor(name, age) {
+			        super(name);
+			        this.age = age;
+			    }
+			
+			eat() {
+			    console.log(`${this.name} 在吃东西`);
+			}
+			}
+
+
+
+    </script>
 
 </body>
 </html>
