--- a/作业3.html
+++ b/作业3.html
@@ -9,7 +9,8 @@
 			#mytank{position: absolute;left:10px;top:100px}
 		</style>
 	</head>
-	<body>		
+	<body>	/
+			<!--219970109  姜凯元-->
 		<img id="mytank" src="images/right.png"/>
 		<script>
 			// 编写代码，让坦克能上下左右移动
