--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>219970109姜凯元
 <body>
+    <div>
+        <img src="./img/zuoye3.png" width="100px" height="50px" alt="">
+        <a href="./作业3.html">作业3</a>
+    </div>
+
     <script>
         // 1.
         let a1, b1, c1 = [1,2,3, ];
